--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-从零开始做网页哦！
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title></title>
+	</head>
+	<body>
+	<canvas id="q" width="1000" height="900"></canvas>
+	<script>    
+        
+            var s = window.screen;
+            var width = q.width = s.width;
+            var height = q.height;
+            var yPositions = Array(300).join(0).split('');
+            var ctx = q.getContext('2d');
+            var draw = function () {
+                ctx.fillStyle = 'rgba(0,0,0,.05)';
+                ctx.fillRect(0, 0, width, height);
+                ctx.fillStyle = 'red';
+                ctx.font = '10pt Georgia';
+                yPositions.map(function (y, index) {
+                    //text = String.fromCharCode(1e2 + Math.random() * 33);　　//这是随机字母
+                    text = parseInt(Math.random() * 2);
+                    x = (index * 10) + 10;
+                    q.getContext('2d').fillText(text, x, y);
+                    if (y > Math.random() * 1e4) {
+                        yPositions[index] = 0;
+                    } else {
+                        yPositions[index] = y + 10;
+                    }
+                });
+            };
+            RunMatrix();
+            function RunMatrix() {
+                Game_Interval = setInterval(draw, 50);
+            }
+      ;
+    </script>
+	</body>
+</html>
