--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>借用实验一下</title>
 	</head>
 	<body>
 	<canvas id="q" width="1000" height="900"></canvas>
